--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,4 +34,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: true
+		  files: build/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml
           verbose: true
